--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,28 @@
     transform: rotate(360deg);
   }
 }
+
+.logo {
+  width: 100%;
+  height: 100px;
+}
+
+.logo-sm {
+  width: 100%;
+  height: 50px;
+}
+
+.list {
+  background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+  padding: 2rem;
+  border-radius: 10px;
+}
+
+ul li {
+  list-style: none;
+  &::before {
+    content: "→ ";
+  }
+  font-size: 1rem;
+  line-height: 2rem;
+}
